security: add HSTS/headers, GET rate limiting, DTO validation, SecurityContext audit user
- SecurityConfig: add HSTS (1y, includeSubDomains), X-Content-Type-Options,
  X-XSS-Protection; parse CORS allowed-origins as comma-separated list;
  add explicit allowCredentials=false; add preflight maxAge
- RateLimitFilter: extend rate limiting to GET/HEAD requests (100/min)
  with separate buckets from write requests (30/min) per IP
- ParametroDTO: add @Size constraints on parameterCategory (50), value (500),
  description (200); add @Pattern(^[AI]$) on status field
- ParametroServiceImpl: extract authenticated username from SecurityContext
  for audit fields instead of hardcoded "SISTEMA"; sanitize search log
  to avoid logging user-supplied input

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>